--- a/plansys2_executor/CMakeLists.txt
+++ b/plansys2_executor/CMakeLists.txt
@@ -60,6 +60,7 @@ set(EXECUTOR_SOURCES
   src/plansys2_executor/behavior_tree/wait_atstart_req_node.cpp
   src/plansys2_executor/behavior_tree/check_overall_req_node.cpp
   src/plansys2_executor/behavior_tree/check_atend_req_node.cpp
+  src/plansys2_executor/behavior_tree/check_timeout_node.cpp
   src/plansys2_executor/behavior_tree/apply_atstart_effect_node.cpp
   src/plansys2_executor/behavior_tree/apply_atend_effect_node.cpp
 )
